--- a/Day1_CSVDataHandling/pom.xml
+++ b/Day1_CSVDataHandling/pom.xml
@@ -7,7 +7,11 @@
     <groupId>org.example</groupId>
     <artifactId>Day1_CSVDataHandling</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependency>
+        <groupId>com.opencsv</groupId>
+        <artifactId>opencsv</artifactId>
+        <version>5.7.1</version>
+    </dependency>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
