--- a/Day1_CSVDataHandling/pom.xml
+++ b/Day1_CSVDataHandling/pom.xml
@@ -7,6 +7,28 @@
     <groupId>org.example</groupId>
     <artifactId>Day1_CSVDataHandling</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <!-- Jackson Core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.16.1</version>  <!-- Use the latest version -->
+        </dependency>
+
+        <!-- Jackson Databind (Required for ObjectMapper) -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.1</version>
+        </dependency>
+
+        <!-- Jackson Annotation (Optional, but recommended) -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.16.1</version>
+        </dependency>
+    </dependencies>
     <dependency>
         <groupId>com.opencsv</groupId>
         <artifactId>opencsv</artifactId>
