--- a/Day2_JSON/pom.xml
+++ b/Day2_JSON/pom.xml
@@ -25,6 +25,11 @@
           <artifactId>json-schema-validator</artifactId>
           <version>2.2.14</version>
       </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.dataformat</groupId>
+          <artifactId>jackson-dataformat-xml</artifactId>
+          <version>2.15.0</version>
+      </dependency>
   </dependencies>
 
 
