--- a/Day2_JSON/pom.xml
+++ b/Day2_JSON/pom.xml
@@ -30,7 +30,30 @@
           <artifactId>jackson-dataformat-xml</artifactId>
           <version>2.15.0</version>
       </dependency>
-  </dependencies>
+      <dependency>
+          <groupId>com.fasterxml.jackson.dataformat</groupId>
+          <artifactId>jackson-dataformat-csv</artifactId>
+          <version>2.15.0</version>
+      </dependency>
+
+
+
+
+      <!-- MySQL Connector -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
+        <!-- Jackson Databind (for JSON conversion) -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+    </dependencies>
+
 
 
     <properties>
